--- a/src/pages/services/services.styles.scss
+++ b/src/pages/services/services.styles.scss
@@ -3,9 +3,9 @@ li {
 }
 .list-in-display {
   h2 {
-    color: blue;
+    color: orangered;
   }
   h4 {
-    color: rgb(26, 82, 64);
+    color: rgb(43, 53, 122);
   }
 }
