added text to welcome page

--- a/src/components/menu/menu.styles.scss
+++ b/src/components/menu/menu.styles.scss
@@ -27,7 +27,7 @@
 
   .active-link {
     background-color: #629880;
-    color: rgb(82, 57, 124);
+    color: beige;
     font-weight: 600;
   }
 }
