--- a/src/components/display/display.styles.scss
+++ b/src/components/display/display.styles.scss
@@ -8,7 +8,8 @@
   display: flex;
   margin: auto;
   justify-content: center;
-  color: rgb(145, 57, 221);
+  color: #9139dd;
+  // position: relative;
 }
 h1 {
   text-align: center;
