--- a/src/pages/welcome/welcome.styles.scss
+++ b/src/pages/welcome/welcome.styles.scss
@@ -1,3 +1,17 @@
-.welcome {
+.welcome-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   color: #4545b3;
+
+  img {
+    height: auto;
+    width: 333px;
+  }
+
+  h4 {
+    width: 80%;
+    text-indent: 4em;
+  }
 }
