--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -3,19 +3,7 @@
   position: static;
   background-color: #4545b3cc;
 
-  .title {
-    color: rgb(25, 24, 27);
-    padding-top: 10px;
-    padding-left: 20px;
-    text-align: left;
-    font-size: 3rem;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
-
-    .subtext {
-      color: #f5f5dc;
-      padding-left: 30px;
-      font-size: 1rem;
-    }
+  .logo {
+    width: 24%;
   }
 }
