changed text on a welcome page, added content to about page, renamed About page into Contacts

--- a/src/pages/services/services.styles.scss
+++ b/src/pages/services/services.styles.scss
@@ -5,7 +5,10 @@ li {
   h2 {
     color: orangered;
   }
+
   h4 {
+    margin-left: 35px;
+    // text-indent: 5vmin;
     color: rgb(43, 53, 122);
   }
 }
