added h4 to all pages

--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -10,6 +10,9 @@
     color: #4545b3;
     text-align: justify;
   }
+  .dimmed {
+    color: rgb(118, 118, 184);
+  }
   img {
     width: 35%;
     height: auto;
