--- a/src/pages/technologies/technologies.styles.scss
+++ b/src/pages/technologies/technologies.styles.scss
@@ -1,8 +1,18 @@
-.logos {
-  width: 70vw;
+.technos {
   display: flex;
-  flex-wrap: wrap;
-  // flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
+
+  h4 {
+    color: rgb(118, 118, 184);
+  }
+
+  .logos {
+    width: 70vw;
+    display: flex;
+    flex-wrap: wrap;
+    // flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
 }
