--- a/src/components/display/display.styles.scss
+++ b/src/components/display/display.styles.scss
@@ -8,7 +8,7 @@
   display: flex;
   margin: auto;
   justify-content: center;
-  color: #9139dd;
+  color: #844db5;
   // position: relative;
 }
 h1 {
